[style] optimise Imgs, start LP style, add cdn font

--- a/index.html
+++ b/index.html
@@ -50,29 +50,30 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header class="header-container">
+        <div class="filter-background"></div>
         <h1 class="logo-container">
-            <img class="logo" src="./images/logo.svg">
+            <img class="logo" src="./images/logo/logo.svg">
         </h1>
         <nav>
             <ul class="nav-container">
-                <li>Créer votre expérience</li>
-                <li>le blog</li>
-                <li class="profil">profil</li>
+                <li><a href="">Créer votre expérience</a></li>
+                <li><a href="">le blog</a></li>
+                <li class="profil"><a href="">profil</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section class="home-container">
             <article>
                 <h2>Reconnectez-vous au monde qui vous entoure.</h2>
                 <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
                 <button>Créez votre expérience</button>
             </article>
         </section>
-        <section>
-            <article>
-                <img src="" alt="">
-                <div>
+        <section class="who-are-we">
+            <article class="we-engage">
+                <img src="./images/imgContainers/first-article.webp">
+                <div class="we-engage-content">
                     <h2>Nous nous engageons pour votre bien-être</h2>
                     <p>Notre priorité est de vous permettre de vous évader dans les meilleures conditions possibles.
                         Nous
