[style] add explainer section

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
                     <button>En savoir plus</button>
                 </div>
             </article>
-            <article>
+            <article class="explainer-container">
                 <h2>Évadez-vous
                     retrouvez-vous</h2>
-                <img src="" alt="">
+                <div class="explainer-preview-container">
+                    <img class="explainer-preview" src="./images/imgContainers/explainer.webp">
+                    <img class="explainer-preview-play-icon" src="./images/icon/play.svg">
+                </div>
             </article>
         </section>
         <section>
