--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <nav>
             <ul class="nav-container">
                 <li><a href="">Créer votre expérience</a></li>
-                <li><a href="./blog/">le blog</a></li>
+                <li><a href="./blog/index.html">le blog</a></li>
                 <li class="profil"><a href="">profil</a></li>
             </ul>
         </nav>
