--- a/not-found/index.html
+++ b/not-found/index.html
@@ -1,55 +1,46 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="fr">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-      content="IE=edge">
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-      href="/styles/main.scss">
-    <link rel="stylesheet"
-      href="/styles/reset.css">
-    <title>Erreur 404</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/styles/main.scss">
+  <link rel="stylesheet" href="/styles/reset.css">
+  <title>Erreur 404</title>
+</head>
 
-  <body>
-    <main>
-      <a href=""></a>
-      <section class="return">
-        <article class="computer">
-          <img src="/images/icon/"
-            alt="">
-          <a href=""><img src="/images/icon/retour.svg"
-              alt=""></a>
-        </article>
-        <article class="mobile">
-          <div class="logo">
-            <img src="/images/icon/Logo.svg"
-              alt="">
-          </div>
-          <div class="menu">
-            <img src="/images/icon/charm_menu-hamburger.svg"
-              alt="">
-          </div>
-        </article>
-      </section>
-      <section class="error">
-        <article class="text">
-          <h1>404 Oups !</h1> <br>
-          <h4>Nous n'avons pas trouvé cette page.</h4> <br>
-          <p>
-            Cette page n'existe pas ou a été retirée.
-            <br>On vous suggère de retourner à l'accueil !
-          </p>
-          <a href="/index.html"><input type="button"
-              value="Accueil"></a>
-        </article>
-        <article class="img">
-        </article>
-      </section>
-    </main>
-  </body>
+<body>
+  <main>
+    <a href=""></a>
+    <section class="return">
+      <article class="computer">
+        <img src="/images/icon/" alt="">
+        <a href=""><img src="/images/icon/retour.svg" alt=""></a>
+      </article>
+      <article class="mobile">
+        <div class="logo">
+          <img src="/images/icon/Logo.svg" alt="">
+        </div>
+        <div class="menu">
+          <img src="/images/icon/charm_menu-hamburger.svg" alt="">
+        </div>
+      </article>
+    </section>
+    <section class="error">
+      <article class="text">
+        <h1>404 Oups !</h1> <br>
+        <h4>Nous n'avons pas trouvé cette page.</h4> <br>
+        <p>
+          Cette page n'existe pas ou a été retirée.
+          <br>On vous suggère de retourner à l'accueil !
+        </p>
+        <a href="/index.html"><input type="button" value="Accueil"></a>
+      </article>
+      <article class="img">
+      </article>
+    </section>
+  </main>
+</body>
 
-</html>
+</html> -->
