[style/structure] login + register

--- a/connect/index.html
+++ b/connect/index.html
@@ -12,7 +12,7 @@
     <div class="signIn-signUp-Container">
         <div id="signIn">
             <div class="header">
-                <h1>Sign IN</h1>
+                <h1>Connexion</h1>
             </div>
             <form>
                 <div class="group">
@@ -31,7 +31,7 @@
         </div>
         <div id="signUp">
             <div class="header">
-                <h1>Sign UP</h1>
+                <h1>Inscription</h1>
             </div>
             <form>
                 <div class="group">
@@ -54,7 +54,7 @@
                     <input id="txtPhoneNumber" type="tel">
                     <label>Phone number</label>
                 </div>
-                <button id="btnSignup" type="button" class="button buttonBlue">Sign up</button>
+                <button id="btnSignup" type="button" class="button buttonBlue">S'inscrire</button>
             </form>
         </div>
     </div>
