--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <ul class="nav-container">
                 <li><a href="">Créer votre expérience</a></li>
                 <li><a href="./blog/index.html">le blog</a></li>
-                <li class="profil"><a href="">profil</a></li>
+                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
             </ul>
         </nav>
     </header>
