--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -19,19 +19,9 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <meta name="description"
-        content="Cactus et vous, vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" />
-    <meta name="author" content="Blueberry DevTeam" /> -->
-    <!-- <meta name="theme-color" content="#FF5740" /> -->
-    <!-- <meta property="og:title" content="Agir c'est s'épanouir | Dispositif A double Sens" />
-    <meta property="og:description"
-        content="A Double Sens vous présente son dispositif basé sur l'entrepreneuriat social, l'entrepreneuriat spécialisé dans les valeurs humaines et sociales" /> -->
-    <!-- <meta property="og:url" content="https://cactusetvous.fr/" /> -->
     <meta property="og:site_name" content="Cactus et vous" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
-    <!-- <meta property="og:image" content="http://cactusetvous.fr/open_graph.jpg" />
-    <meta property="og:image:secure_url" content="https://cactusetvous.fr/open_graph.jpg" /> -->
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -56,20 +46,18 @@
             style="display:none;visibility:hidden">
         </iframe>
     </noscript>
-    <header>
-        <div class="logo">
-            <img src="../images/logo.svg" alt="Logo Escapee" />
-        </div>
-        <ul class="navbar">
-            <li class="close-navbar"><img src="../images/closeburger.svg" alt="closeNavbar"></li>
-            <li><a href="../index.html">Accueil</a></li>
-            <li><a href="../index.html/#qui">Qui sommes-nous ?</a></li>
-            <li><a href="../index.html/#voyage">Newsletter</a></li>
-            <li><a class="btn" href="#">Se connecter</a></li>
-        </ul>
-        <div class="burger">
-            <img class="open-navbar" src="../images/menubuger.svg" alt="burger menu">
-        </div>
+    <header class="header-container">
+        <div class="filter-background"></div>
+        <h1 class="logo-container">
+            <img class="logo" src="../../images/logo/logo.svg">
+        </h1>
+        <nav>
+            <ul class="nav-container">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="">Créer votre expérience</a></li>
+                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="background">
