[style] LP testimony / blog / newsletter & footer

--- a/index.html
+++ b/index.html
@@ -99,7 +99,18 @@
             <article class="testimony-globe-container">
                 <div id="testimony-globe">
                 </div>
-                <div class="testimony-label-container"></div>
+                <div class="testimony-label-container">
+                    <h3 class="testimony-label-title">paul et Giuseppe, Arles, Italie</h3>
+                    <div class="testimony-content-container">
+                        <p class="testimony-label-content">Grâce à Escapee j'ai pu découvrir Arles, qui était un coup de
+                            cœur. J'avais envie de découvrir l'Italie, mais pour un
+                            premier voyage en solo, j'avais des scrupules à partir hors de France. Clotilde m'a donc
+                            proposé de découvrir Arles...</p>
+                        <img class="testimony-label-quoteUp" src="./images/icon/quoteUp.svg">
+                        <img class="testimony-label-quoteDown" src="./images/icon/quoteDown.svg">
+                    </div>
+                    <span><a class="testimony-label-button">En savoir plus</a></span>
+                </div>
             </article>
         </section>
         <section class="statistiques-container">
@@ -122,6 +133,7 @@
         </section>
 
         <section class="carousel-section-container">
+            <h2>La une du Blog</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">Slide 1</div>
@@ -129,24 +141,20 @@
                     <div class="swiper-slide">Slide 3</div>
                     <div class="swiper-slide">Slide 4</div>
                     <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
+            <button><a href="./blog/index.html">acceder au blog</a></button>
         </section>
-        <section>
-            <article>
-                <div>
+        <section class="newsletter-section-container">
+            <article class="newsletter-container">
+                <div class="newsletter-content-container">
                     <h2>Newsletter</h2>
                     <p>Permettez-vous d’explorer de nouveaux horizons en rejoignant notre communauté. Vous serez tenu au
                         courant des avancées
                         du projets Escapee, recevrez des offres expectionnelles, découvrirez nos nouvelles
                         fonctionnalités en exclusivité, afin
                         de ne jamais rater l’occasion de vous évader.</p>
-
                     <div id="mc_embed_signup">
                         <p id="result_news" style="display: none;"></p>
                         <form
@@ -168,81 +176,47 @@
                         </form>
                     </div>
                 </div>
-                <div>
-                    <div></div>
-                    <div></div>
+                <div class="newsletter-view-container">
+                    <div class="newsletter-left-view-container">
+                        <img class="newsletter-top-left-view"
+                            src="./images/imgContainers/newsletter-top-left-view..webp">
+                        <img class="newsletter-bottom-left-view"
+                            src="./images/imgContainers/newsletter-bottom-left-view.webp">
+                    </div>
+                    <div class="newsletter-right-view-container">
+                        <img class="newsletter-top-right-view"
+                            src="./images/imgContainers/newsletter-top-right-view.webp">
+                        <img class="newsletter-bottom-right-view"
+                            src="./images/imgContainers/newsletter-bottom-right-view.webp">
+                    </div>
                 </div>
             </article>
         </section>
-
     </main>
-
-    <!-- <footer>
+    <footer>
         <div>
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="#qui">Qui sommes-nous ?</a> </li>
-                <li><a href="#voyage">Newsletter</a> </li>
                 <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a id="insta" href="https://www.instagram.com/escapee_travel/"><img src="./images/insta.svg"
-                            alt="Instagram"></a> </li>
-                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel"><img src="./images/twitch.svg"
-                            alt="Twitch"></a> </li>
-                <li><a id="tripadvisor" href=""><img src="./images/paanteon.svg" alt="Paanteon"></a> </li>
-                <li><a id="youtube" href="#"><img src="#" alt="Youtube"></a></li>
+                <li><a id="insta" href="https://www.instagram.com/escapee_travel/" target="_blank"><img
+                            src="./images/icon/Insta.svg" alt="Instagram"></a> </li>
+                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel" target="_blank"><img
+                            src="./images/icon/Twitch.svg" alt="Twitch"></a> </li>
+                <li><a id="youtube" href="#" target="_blank"><img src="./images/icon/Youtube.svg" alt="Youtube"></a>
+                </li>
+                <li><a id="tripadvisor" href="" target="_blank"><img src="./images/icon/tripadvisor.svg"
+                            alt="Paanteon"></a> </li>
             </ul>
             <div>
-                <p>© Copyright 2022</p>
+                <p>© 2022 escapee</p>
                 <p>
                     <a href="privacy-policy.html">Mentions légales, Politique de confidentialité</a>
                 </p>
             </div>
         </div>
-    </footer> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div id="mc_embed_signup">
-                                <p id="result_news" style="display: none;"></p>
-                                <form
-                                    action="https://Escapee.us9.list-manage.com/subscribe/post?u=8e71f96c5c933f5329444df27&amp;id=3ad5a89f21"
-                                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
-                                    class="validate" target="_blank">
-                                    <div class="mc-field-group">
-                                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
-                                            placeholder="Votre adresse e-mail" required>
-                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                            <input type="text" name="b_8e71f96c5c933f5329444df27_3ad5a89f21"
-                                                tabindex="-1" value="">
-                                        </div>
-                                        <button type="submit" name="subscribe" id="mc-embedded-subscribe"
-                                            class="btn">S'inscrire</button>
-                                        <div id="subscribe-result">
-                                        </div>
-                                    </form>
-                                </div>
-                            </div> -->
-
-
-
-
+    </footer>
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
     <script type='text/javascript'>
         (function ($) {
