bouton retour fonctionnel

--- a/not-found/index.html
+++ b/not-found/index.html
@@ -15,10 +15,9 @@
       <a href=""></a>
       <section class="return">
         <article class="computer">
-          <img src="/images/icon/"
-            alt="">
-          <a href=""><img src="/images/icon/retour.svg"
-              alt=""></a>
+          <button onclick="history.go(-1);">
+            <img src="/images/icon/retour.svg" alt="">
+          </button>
         </article>
         <article class="mobile">
           <div class="logo">
@@ -46,7 +45,8 @@
         </article>
       </section>
     </main>
-    <script type="module" src="../scripts/notFound.js"></script>
+    <script type="module"
+      src="../scripts/notFound.js"></script>
   </body>
 
 </html>
