--- a/connect/SignIn/index.html
+++ b/connect/SignIn/index.html
@@ -17,7 +17,7 @@
             <ul class="nav-container">
                 <li><a href="">Créer votre expérience</a></li>
                 <li><a href="./blog/index.html">le blog</a></li>
-                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
+                <li class="profil"><a href="connect/signIn/index.html">se connecter</a></li>
             </ul>
         </nav>
     </header>
