[comment] comment auth

--- a/connect/SignIn/index.html
+++ b/connect/SignIn/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,12 +48,12 @@
                                 <p><a href="#">Mot de passe oublié ?</a></p>
                             </div>
                             <button id="btnLogin" type="button" class="button buttonGreen">Se connecter</button>
-                        </form>
-                        <!-- si vous n'avez pas de compte -->
-
+                        </form> -->
+<!-- si vous n'avez pas de compte -->
+<!-- 
                         <div class="group new">
                             <p>
-                                Pas encore inscrit ? <a href="../signOut/index.html">Créez un compte</a>
+                                Pas encore inscrit ? <a href="../">Créez un compte</a>
                             </p>
 
                         </div>
@@ -81,4 +81,4 @@
     <script type="module" src="../../scripts/firebaseAuth.js"></script>
 </body>
 
-</html>
+</html> -->
