--- a/connect/signOut/index.html
+++ b/connect/signOut/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -88,4 +88,4 @@
     <script type="module" src="../../scripts/firebaseAuth.js"></script>
 </body>
 
-</html>
+</html> -->
