--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="">Créer votre expérience</a></li>
+                <li><a href="./quiz/start.html">Créer votre expérience</a></li>
                 <li><a href="./blog/index.html">le blog</a></li>
                 <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
             </ul>
@@ -67,7 +67,7 @@
             <article>
                 <h2>Reconnectez-vous au monde qui vous entoure.</h2>
                 <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
-                <button>Créez votre expérience</button>
+                <button onclick="window.location.href = './quiz/start.html';" >Créez votre expérience</button>
             </article>
         </section>
         <section class="who-are-we">
@@ -136,11 +136,7 @@
             <h2>La une du Blog</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">Slide 1</div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
+                    
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
