[feature] test deploy play pause iframe

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <article>
                 <h2>Reconnectez-vous au monde qui vous entoure.</h2>
                 <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
-                <button onclick="window.location.href = './quiz/start.html';" >Créez votre expérience</button>
+                <button onclick="window.location.href = './quiz/start.html';">Créez votre expérience</button>
             </article>
         </section>
         <section class="who-are-we">
@@ -93,6 +93,13 @@
                     <img class="explainer-preview-play-icon" src="./images/icon/play.svg">
                 </div>
             </article>
+        </section>
+        <section class="explainer-ytb-container">
+            <iframe class="ytbIframe-explainer" src="https://www.youtube-nocookie.com/embed/_OppesHp9nA?enablejsapi=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            <div class="close-explainer-container"><img src="images/icon/closeIcon.svg"></div>
         </section>
         <section class="testimony-users-container">
             <h2>ils parlent de nous</h2>
@@ -136,7 +143,7 @@
             <h2>La une du Blog</h2>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
-                    
+
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
