[fix] styles / import & [feature] fix & add correctly connect page

--- a/connect/signUp/index.html
+++ b/connect/signUp/index.html
@@ -5,39 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article</title>
-    <link rel="icon" type="image/png" href="../../public/icon-16x16.png" />
-    <link rel="icon" type="image/png" href="../../public/icon-32x32.png" />
-    <link rel="icon" type="image/png" href="../../public/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" href="../../public/android-chrome-512x512.png" />
-    <link rel="icon" type="image/png" href="../../public/favicon.ico" />
-    <link rel="icon" type="image/png" href="../../public/apple-touch-icon.png" />
+    <title>Authentification</title>
 </head>
 
 <body>
     <header class="header-container">
         <div class="filter-background"></div>
         <h1 class="logo-container">
-            <img class="logo" src="../../images/logo/logo.svg">
+            <img class="logo" src="../images/logo/logo.svg">
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../">Home</a></li>
-                <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="../../connect/">profile</a></li>
+                <li><a href="../../quiz/">Créer votre expérience</a></li>
+                <li><a href="../../blog/">le blog</a></li>
             </ul>
         </nav>
     </header>
-    <main id="article">
-        <section>
-            <h1 id="title-articles"></h1>
-            <a class="btn">Éditer</a>
-        </section>
-        <section>
+    <div class="signIn-signUp-Container">
+        <div id="signUp">
+            <div class="header">
+                <h1>Inscription</h1>
+            </div>
+            <form>
+                <div class="group">
+                    <input id="txtFirstName" type="firstname">
+                    <label>First name</label>
+                </div>
+                <div class="group">
+                    <input id="txtLastName" type="lastname">
+                    <label>Last name</label>
+                </div>
+                <div class="group">
+                    <input id="txtEmailSignUp" type="email" required>
+                    <label>Email</label>
+                </div>
+                <div class="group">
+                    <input id="txtPasswordSignUp" type="password" required>
+                    <label>Password</label>
+                </div>
+                <div class="group">
+                    <input id="txtPhoneNumber" type="tel">
+                    <label>Phone number</label>
+                </div>
+                <button id="btnSignup" type="button" class="button buttonBlue">S'inscrire</button>
+            </form>
+        </div>
+    </div>
 
-            <div id="content-article"></div>
-        </section>
-    </main>
     <footer>
         <div>
             <ul>
@@ -63,8 +77,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="../../scripts/firebaseConfig.js"></script>
-    <script type="module" src="../../scripts/blog.js"></script>
+    <script type="module" src="../../scripts/firebaseAuth.js"></script>
 </body>
 
 </html>
