--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="./quiz/start.html">Créer votre expérience</a></li>
-                <li><a href="./blog/index.html">le blog</a></li>
-                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
+                <li><a href="./quiz/">Créer votre expérience</a></li>
+                <li><a href="./blog/">le blog</a></li>
+                <li class="profil"><a href="connect/">profile</a></li>
             </ul>
         </nav>
     </header>
@@ -67,7 +67,7 @@
             <article>
                 <h2>Reconnectez-vous au monde qui vous entoure.</h2>
                 <p>Voyagez à votre façon et venez vivre une expérience qui vous ressemble.</p>
-                <button onclick="window.location.href = './quiz/start.html';">Créez votre expérience</button>
+                <button onclick="window.location.href = './quiz/';">Créez votre expérience</button>
             </article>
         </section>
         <section class="who-are-we">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
-            <button><a href="./blog/index.html">acceder au blog</a></button>
+            <button><a href="./blog/">acceder au blog</a></button>
         </section>
         <section class="newsletter-section-container">
             <article class="newsletter-container">
@@ -215,7 +215,7 @@
             <div>
                 <p>© 2022 escapee</p>
                 <p>
-                    <a href="privacy-policy.html">Mentions légales, Politique de confidentialité</a>
+                    <a href="./privacy-policy/">Mentions légales & Politique de confidentialité</a>
                 </p>
             </div>
         </div>
