--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -53,9 +53,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../">Home</a></li>
                 <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
+                <li class="profil"><a href="../connect/">Profile</a></li>
             </ul>
         </nav>
     </header>
@@ -177,22 +177,22 @@
     <footer>
         <div>
             <ul>
-                <li><a href="../index.html">Accueil</a></li>
-                <li><a href="../index.html/#qui">Qui sommes-nous ?</a> </li>
-                <li><a href="../index.html/#voyage">Newsletter</a> </li>
-                <li><a href="../index.html/#">Compte</a> </li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Compte</a> </li>
             </ul>
             <ul>
-                <li><a href=""><img src="../images/insta.svg" alt="Instagram"></a> </li>
-                <li><a href="https://www.twitch.tv/escapee_travel"><img src="../images/twitch.svg" alt="Twitch"></a>
+                <li><a id="insta" href="https://www.instagram.com/escapee_travel/" target="_blank"><img
+                            src="../images/icon/Insta.svg" alt="Instagram"></a> </li>
+                <li><a id="twitch" href="https://www.twitch.tv/escapee_travel" target="_blank"><img
+                            src="../images/icon/Twitch.svg" alt="Twitch"></a> </li>
+                <li><a id="youtube" href="#" target="_blank"><img src="../images/icon/Youtube.svg" alt="Youtube"></a>
                 </li>
-                <li><a href=""><img src="../images/paanteon.svg" alt="Paanteon"></a> </li>
+                <li><a id="tripadvisor" href="" target="_blank"><img src="../images/icon/tripadvisor.svg"
+                            alt="Paanteon"></a>
+                </li>
             </ul>
             <div>
-                <p>© Copyright 2022</p>
-                <p>
-                    <a href="#">Mentions légales, Politique de confidentialité</a>
-                </p>
+                <p>© 2022 escapee</p>
             </div>
         </div>
     </footer>
