--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,16 +23,16 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../">Home</a></li>
                 <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="../connect/SignIn/index.html">se connecter</a></li>
+                <li class="profil"><a href="../connect/">se connecter</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <article>
-                    <h1>Quelle est votre façon de vous relaxer ?</h1>
+                <h1>Quelle est votre façon de vous relaxer ?</h1>
             </article>
             <img src="../images/icon/quiz_start.svg" alt="local">
         </section>
