--- a/quiz/q1.html
+++ b/quiz/q1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,18 +23,19 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../">Home</a></li>
                 <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="../connect/SignIn/index.html">se connecter</a></li>
+                <li class="profil"><a href="../connect/">se connecter</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
             <article>
-                    <h1>Quelle destination vous correspond le mieux</h1>
-                    <p>En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos besoins !</p>
-                    <a class="btn" href="q1.html">commencer</a>
+                <h1>Quelle destination vous correspond le mieux</h1>
+                <p>En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos
+                    besoins !</p>
+                <a class="btn" href="q1.html">commencer</a>
             </article>
         </section>
     </main>
