--- a/testimonials/add/index.html
+++ b/testimonials/add/index.html
@@ -22,9 +22,9 @@
         </h1>
         <nav>
             <ul class="nav-container">
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../">Home</a></li>
                 <li><a href="">Créer votre expérience</a></li>
-                <li class="profil"><a href="connect/SignIn/index.html">se connecter</a></li>
+                <li class="profil"><a href="connect/">se connecter</a></li>
             </ul>
         </nav>
     </header>
