--- a/contact/index.html
+++ b/contact/index.html
@@ -1,86 +1,97 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <script type="module"
-    src="../scripts/contact.js"></script>
+<script type="module" src="../scripts/contact.js"></script>
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible"
-      content="IE=edge">
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1.0">
-    <title>Nous contacter</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nous contacter</title>
+</head>
 
-  <body>
+<body>
 
-    <header class="header-container">
-      <div class="filter-background"></div>
-      <h1 class="logo-container">
-        <img class="logo"
-          src="/images/logo/logo.svg">
-      </h1>
-      <nav>
-        <ul class="nav-container">
-          <li><a href="">Créer votre expérience</a></li>
-          <li><a href="/blog/index.html">le blog</a></li>
-          <li class="profil"><a href="/connect/SignIn/index.html">se connecter</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header class="header-container">
+    <div class="filter-background"></div>
+    <h1 class="logo-container">
+      <img class="logo" src="/images/logo/logo.svg">
+    </h1>
+    <nav>
+      <ul class="nav-container">
+        <li><a href="">Créer votre expérience</a></li>
+        <li><a href="/blog/">le blog</a></li>
+        <li class="profil"><a href="../connect/">Profile</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-      <section>
-        <article class="titre">
-          <h1>CONTACTEZ-NOUS</h1>
-          <br>
-          <h3>UNE INTERROGATION ? UN DOUTE ? NOUS VOUS RÉPONDONS.</h3>
-        </article>
-        <article class="contact">
-          <iframe
-            src="https://us9.list-manage.com/contact-form?u=8e71f96c5c933f5329444df27&form_id=730c2335295b1125aba24d78a1faebf3"
-            frameborder="0"
-            id="contact"
-            width="500"
-            height="700"
-            loading="lazy"
-            scrolling="no">
-          </iframe>
-          <div class="ou">
-            <p>--------------&nbsp; Ou &nbsp; --------------</p>
-          </div>
-          <p class="us">Contactez-nous sur nos réseaux</p>
-          <div>
-            <ul class="reseaux">
-              <li>
-                <a href="https://www.instagram.com/escapee_travel/" target="_blank"><img
-                    src="/images/icon/icon_black/Insta.svg"
-                    alt="">
-                </a>
-              </li>
-              <li>
-                <a href="https://www.twitch.tv/escapee_travel" target="_blank"><img
-                    src="/images/icon/icon_black/Twitch.svg"
-                    alt="">
-                </a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/channel/UCu0_svbpHLbbUuZG6EfPd5Q" target="_blank"><img
-                    src="/images/icon/icon_black/Youtube.svg"
-                    alt="">
-                </a>
-              </li>
-              <li>
-                <a href="https://www.tripadvisor.fr/Profile/Escapee_travel" target="_blank"><img
-                    src="/images/icon/icon_black/tripadvisor.svg"
-                    alt="">
-                </a>
-              </li>
-            </ul>
-          </div>
-        </article>
-      </section>
-    </main>
-  </body>
+  <main>
+    <section>
+      <article class="titre">
+        <h1>CONTACTEZ-NOUS</h1>
+        <br>
+        <h3>UNE INTERROGATION ? UN DOUTE ? NOUS VOUS RÉPONDONS.</h3>
+      </article>
+      <article class="contact">
+        <iframe
+          src="https://us9.list-manage.com/contact-form?u=8e71f96c5c933f5329444df27&form_id=730c2335295b1125aba24d78a1faebf3"
+          frameborder="0" id="contact" width="500" height="700" loading="lazy" scrolling="no">
+        </iframe>
+        <div class="ou">
+          <p>--------------&nbsp; Ou &nbsp; --------------</p>
+        </div>
+        <p class="us">Contactez-nous sur nos réseaux</p>
+        <div>
+          <ul class="reseaux">
+            <li>
+              <a href="https://www.instagram.com/escapee_travel/" target="_blank"><img
+                  src="/images/icon/icon_black/Insta.svg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.twitch.tv/escapee_travel" target="_blank"><img
+                  src="/images/icon/icon_black/Twitch.svg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCu0_svbpHLbbUuZG6EfPd5Q" target="_blank"><img
+                  src="/images/icon/icon_black/Youtube.svg" alt="">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.tripadvisor.fr/Profile/Escapee_travel" target="_blank"><img
+                  src="/images/icon/icon_black/tripadvisor.svg" alt="">
+              </a>
+            </li>
+          </ul>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <div>
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Compte</a> </li>
+      </ul>
+      <ul>
+        <li><a id="insta" href="https://www.instagram.com/escapee_travel/" target="_blank"><img
+              src="../images/icon/Insta.svg" alt="Instagram"></a> </li>
+        <li><a id="twitch" href="https://www.twitch.tv/escapee_travel" target="_blank"><img
+              src="../images/icon/Twitch.svg" alt="Twitch"></a> </li>
+        <li><a id="youtube" href="#" target="_blank"><img src="../images/icon/Youtube.svg" alt="Youtube"></a>
+        </li>
+        <li><a id="tripadvisor" href="" target="_blank"><img src="../images/icon/tripadvisor.svg" alt="Paanteon"></a>
+        </li>
+      </ul>
+      <div>
+        <p>© 2022 escapee</p>
+        <p>
+          <a href="../privacy-policy/">Mentions légales & Politique de confidentialité</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+</body>
 
 </html>
