--- a/connect/index.html
+++ b/connect/index.html
@@ -16,6 +16,7 @@
         </h1>
         <nav>
             <ul class="nav-container">
+                <li><a href="../">Home</a></li>
                 <li><a href="../quiz/">Créer votre expérience</a></li>
                 <li><a href="../blog/">le blog</a></li>
             </ul>
