[feature] quiz stucture => index.html

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -32,7 +32,10 @@
     <main>
         <section>
             <article>
-                <h1>Quelle est votre façon de vous relaxer ?</h1>
+                <h1>Quelle destination vous correspond le mieux</h1>
+                <p>En répondant à nos questions, nous pourrons déterminer ensemble quel séjour est le plus adapté à vos
+                    besoins !</p>
+                <a class="btn" href="q1.html">commencer</a>
             </article>
             <img src="../images/icon/quiz_start.svg" alt="local">
         </section>
